fix: .dropcap displays correctly on firefox

--- a/quartz/styles/fonts.scss
+++ b/quartz/styles/fonts.scss
@@ -260,7 +260,6 @@ code {
   position: relative;
   text-transform: uppercase;
   margin-right: 0.05rem;
-  padding-top: 0;
 
   // Inline dropcaps should be slightly higher than the baseline
   p & {
